--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "@babel/preset-env": "^7.25.4"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.3",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.21.0",
+    "mysql2": "^3.11.3",
     "nodemon": "^3.1.5",
     "path": "^0.12.7"
   }
